fixed overflow issue with tag class

--- a/0034randomChoicePicker/style.css
+++ b/0034randomChoicePicker/style.css
@@ -73,6 +73,8 @@ h3 {
 	border-radius: 50px;
 	padding: 10px 20px;
 	margin: 0 5px 10px 0;
+	font-size: 14px;
+	display: inline-block;
 }
 
 .tag.highlight {
